--- a/snippets/header-navigation.liquid
+++ b/snippets/header-navigation.liquid
@@ -1,3 +1,12 @@
+{% liquid
+    assign mobile = settings.add_mobile
+    assign email = settings.add_email
+    assign time = settings.add_time
+    assign enable_currency = settings.enable_currency
+    assign enable_language = settings.enable_language
+    assign compare = settings.link_compare
+    assign wishlist = settings.link_wishlist
+%}
 <nav
     id="MegaMenu"
     class="header__menu header__menu--main js-mobile-menu"
@@ -13,42 +22,209 @@
         </a>
     </div>
     <div class="header__menu__inner-container">
-        <div class="header__menu__navigation-container">
-            {% if menu.links.size > 0 %}
-                <ul class="header__menu-list header__menu-list--mobile">
-                    {% for link in menu.links %}
-                        {% liquid
-                            capture mega_menu_snippet
-                                for block in blocks
-                                    case block.type
-                                        when 'simple_linklist'
-                                            render 'mega-menu-simle-nav', block: block, link: link
+        <tab-element autofocus="false">
+            <ul class="mobile-menu-tabs js-tablist" role="tablist">
+                <li class="mobile-menu-tabs__item">
+                    <button
+                        role="button"
+                        class="mobile-menu-tabs__btn active js-tab"
+                        role="tab"
+                        aria-selected="true"
+                        aria-controls="menu-panel"
+                    >
+                        {{ 'header.navigation' | t }}
+                    </button>
+                </li>
+                <li class="mobile-menu-tabs__item">
+                    <button
+                        role="button"
+                        class="mobile-menu-tabs__btn js-tab"
+                        role="tab"
+                        aria-selected="false"
+                        aria-controls="category-panel"
+                    >
+                        {{ 'header.categories' | t }}
+                    </button>
+                </li>
+            </ul>
+            <div class="mobile-menu-tabs__content-wrapper">
+                <div
+                    id="menu-panel"
+                    class="mobile-menu-tabs__content js-tabpanel"
+                    role="tabpanel"
+                >
+                    {% if menu.links.size > 0 %}
+                        <ul class="header__menu-list header__menu-list--mobile">
+                            {% for link in menu.links %}
+                                {% liquid
+                                    capture mega_menu_snippet
+                                        for block in blocks
+                                            case block.type
+                                                when 'simple_linklist'
+                                                    render 'mega-menu-simle-nav', block: block, link: link
 
-                                        when 'mega_menu_three'
-                                            render 'mega-menu-three-nav', block: block, link: link
+                                                when 'mega_menu_three'
+                                                    render 'mega-menu-three-nav', block: block, link: link
 
-                                        when 'mega_menu_four'
-                                            render 'mage-menu-four-nav', block: block, link: link
-                                    endcase
-                                endfor
-                            endcapture
-                        %}
-                        {% if mega_menu_snippet != blank %}
-                            {{ mega_menu_snippet }}
-                        {% else %}
-                            <li class="header__menu-item header__menu-item--mobile">
-                                <a
-                                    id="headerMenuItemLink-{{forloop.index}}"
-                                    class="header__menu-item-link header__menu-item-link--mobile"
-                                    href="{{ link.url }}"
-                                >
-                                    {{ link.title }}
-                                </a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        </div>
+                                                when 'mega_menu_four'
+                                                    render 'mage-menu-four-nav', block: block, link: link
+                                            endcase
+                                        endfor
+                                    endcapture
+                                %}
+                                {% if mega_menu_snippet != blank %}
+                                    {{ mega_menu_snippet }}
+                                {% else %}
+                                    <li class="header__menu-item header__menu-item--mobile">
+                                        <a
+                                            id="headerMenuItemLink-{{forloop.index}}"
+                                            class="header__menu-item-link header__menu-item-link--mobile"
+                                            href="{{ link.url }}"
+                                        >
+                                            {{ link.title }}
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                    {% if settings.topmenu != blank %}
+                        <div id="userLinksMobile" class="user-links">
+                            <span class="h6">{{ 'header.top-menu' | t }}:</span>
+                            <ul class="user-links">
+                                {% for link in linklists[settings.topmenu].links %}
+                                    <li>
+                                        <a href="{{ link.url }}">{{ link.title }}</a>
+                                    </li>
+                                {% endfor %}
+                                {% if compare != blank %}
+                                    <li>
+                                        <a href="{{ compare }}">{{ 'pages.wishlist' | t }}</a>
+                                    </li>
+                                {% endif %}
+                                {% if wishlist != blank %}
+                                    <li>
+                                        <a href="{{ wishlist }}">{{ 'pages.compare' | t }}</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                    {% endif %}
+                    {% if enable_currency != blank or enable_language != blank %}
+                        <div id="settingsBoxMobile" class="settings-box">
+                            {% if enable_currency != blank %}
+                                <div class="currency-picker">
+                                    <span class="h6">{{ 'header.currency' | t }}:</span>
+                                    <localization-form>
+                                        {% form 'localization', id: 'CurrencyForm', class: 'localization-form' %}
+                                            <div class="no-js-hidden">
+                                                <ul
+                                                    id="CurrencyList"
+                                                    role="list"
+                                                    class="header__menu-select list-unstyled"
+                                                >
+                                                    {%- for currency in shop.enabled_currencies -%}
+                                                        <li class="localization-form__item">
+                                                            <a
+                                                                class="link link--text localization-form{% if currency == cart.currency %} active{% endif %} focus-inset"
+                                                                href="#"
+                                                                lang="{{ currency.iso_code }}"
+                                                                {% if currency == cart.currency %}
+                                                                    aria-current="true"
+                                                                {% endif %}
+                                                                data-value="{{ currency.iso_code }}"
+                                                            >
+                                                                {{ currency.iso_code -}}
+                                                                {{- currency.symbol }}
+                                                            </a>
+                                                        </li>
+                                                    {%- endfor -%}
+                                                </ul>
+                                                <input
+                                                    type="hidden"
+                                                    name="currency_code"
+                                                    value="{{ localization.country.iso_code }}"
+                                                >
+                                            </div>
+                                        {% endform %}
+                                    </localization-form>
+                                </div>
+                            {% endif %}
+                            {% if enable_language != blank %}
+                                <div class="language-picker">
+                                    <span class="h6">{{ 'header.language' | t }}:</span>
+                                    <localization-form>
+                                        {%- form 'localization', id: 'LanguageForm', class: 'localization-form' -%}
+                                            <div class="no-js-hidden">
+                                                <ul
+                                                    id="LanguageList"
+                                                    role="list"
+                                                    class="header__menu-select list-unstyled"
+                                                >
+                                                    {%- for language in localization.available_languages -%}
+                                                        <li class="localization-form__item">
+                                                            <a
+                                                                class="link link--text localization-form{% if language.iso_code == localization.language.iso_code %} active{% endif %} focus-inset"
+                                                                href="#"
+                                                                hreflang="{{ language.iso_code }}"
+                                                                lang="{{ language.iso_code }}"
+                                                                {% if language.iso_code
+                                                                        == localization.language.iso_code
+                                                                %}
+                                                                    aria-current="true"
+                                                                {% endif %}
+                                                                data-value="{{ language.iso_code }}"
+                                                            >
+                                                                {{ language.endonym_name | capitalize }}
+                                                            </a>
+                                                        </li>
+                                                    {%- endfor -%}
+                                                </ul>
+                                                <input
+                                                    type="hidden"
+                                                    name="locale_code"
+                                                    value="{{ localization.language.iso_code }}"
+                                                >
+                                            </div>
+                                        {%- endform -%}
+                                    </localization-form>
+                                </div>
+                            {% endif %}
+                        </div>
+                    {% endif %}
+                    {% if mobile != blank or email != blank or time != blank %}
+                        <div id="helpLinksMobile" class="help-links">
+                            <span class="h6">{{ 'header.help' | t }}:</span>
+                            <ul class="top-header__info">
+                                {% if mobile != blank %}
+                                    <li class="top-header__mobile">
+                                        {% render 'icons-svg', icons: 'phone' %}
+                                        <a href="tel:+7758724444">{{ mobile }}</a>
+                                    </li>
+                                {% endif %}
+                                {% if email != blank %}
+                                    <li class="top-header__email">
+                                        {% render 'icons-svg', icons: 'envelope' %}
+                                        <a href="mailto:{{ email }}">{{ email }}</a>
+                                    </li>
+                                {% endif %}
+                                {% if time != blank %}
+                                    <li class="top-header__time">
+                                        {% render 'icons-svg', icons: 'calendar' %}
+                                        {{ time }}
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                    {% endif %}
+                </div>
+
+                <div
+                    id="category-panel"
+                    class="mobile-menu-tabs__content js-tabpanel hidden"
+                    role="tabpanel"
+                ></div>
+            </div>
+        </tab-element>
     </div>
 </nav>
