--- a/scss/components/component-search-tabs.scss
+++ b/scss/components/component-search-tabs.scss
@@ -38,6 +38,20 @@
     width: 25%;
 }
 
+@media screen and (max-width: 991px) {
+    .search-tabs__list {
+        min-height: 1px;
+        overflow: auto;
+        column-gap: 2rem;
+        padding-bottom: 2rem;
+    }
+    .search-tabs__list-item {
+        min-width: 250px;
+        width: 100%;
+    }
+}
+
+
 .search-product-post__content,
 .search-blog-post__content,
 .search-collection-post__content {
