--- a/snippets/header-style-minimal.liquid
+++ b/snippets/header-style-minimal.liquid
@@ -71,10 +71,10 @@
         </div>
     </div>
 
-    <div class="header-menu-outer section-header">
+    <div class="header-menu-outer section-header d-flex align-items-center">
         <div class="container">
             <div class="row">
-                <div class="col-5 col-sm-5 col-md-3 col-lg-3 align-self-center justify-content-start d-flex minimal-logo-col">
+                <div class="col-7 col-sm-7 col-md-3 col-lg-3 align-self-center justify-content-start d-flex minimal-logo-col">
                     <div class="header__icon-open">
                         <a
                             class="js-menu-toggle focus-inset"
@@ -127,9 +127,9 @@
                     </div>
                 </div>
                 <div class="col-1 col-sm-1 col-md-5 col-lg-6 align-self-center minimal-menu-col">
-                    {% render 'header-navigation', menu: menu, blocks: blocks %}
+                    {% render 'header-navigation', menu: menu, blocks: blocks, settings: settings %}
                 </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 align-self-center icons-col text-right d-flex justify-content-end minimal-elements-col">
+                <div class="col-4 col-sm-4 col-md-4 col-lg-3 align-self-center icons-col text-right d-flex justify-content-end minimal-elements-col">
                     {% render 'header-elements', blocks: blocks, topmenu: topmenu, settings: settings %}
                 </div>
             </div>
