--- a/snippets/header-style-simple.liquid
+++ b/snippets/header-style-simple.liquid
@@ -9,7 +9,7 @@
     <div class="header js-header d-flex align-items-center">
         <div class="header__wrapper container">
             <div class="row">
-                <div class="col-5 col-sm-5 col-md-3 col-lg-2 align-self-center justify-content-start d-flex">
+                <div class="col-7 col-sm-7 col-md-3 col-lg-2 align-self-center justify-content-start d-flex">
                     <div class="header__icon-open">
                         <a
                             class="js-menu-toggle focus-inset"
@@ -62,9 +62,9 @@
                     </div>
                 </div>
                 <div class="col-1 col-sm-1 col-md-5 col-lg-7 align-self-center d-menu-col">
-                    {% render 'header-navigation', menu: menu, blocks: blocks %}
+                    {% render 'header-navigation', menu: menu, blocks: blocks, settings: settings %}
                 </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 align-self-center icons-col text-right d-flex justify-content-end">
+                <div class="col-4 col-sm-4 col-md-4 col-lg-3 align-self-center icons-col text-right d-flex justify-content-end">
                     {% render 'header-elements', blocks: blocks, topmenu: topmenu, settings: settings %}
                 </div>
             </div>
