--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -611,6 +611,17 @@
                     "label": "Image"
                 }
             ]
+        },
+        {
+            "name": "Mobile Categories",
+            "type": "category_top",
+            "settings": [
+                {
+                    "type": "collection_list",
+                    "id": "category_top",
+                    "label": "Featured Collections"
+                }
+            ]
         }
     ]
 }
