--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -1,6 +1,7 @@
 <div class="header__search search_wrapper">
     <a href="#" class="search-modal__toggle-open focus-inset header__menu-item-link js-summary">
         {% render 'icons-svg', icons: 'search' %}
+        {% render 'icons-svg', icons: 'close' %}
         <span class="header__menu-item-text">{{ 'sections.search.search' | t }}</span>
     </a>
 
