--- a/scss/components/component-search-modal.scss
+++ b/scss/components/component-search-modal.scss
@@ -1,3 +1,21 @@
+
+details-open {
+    .search-modal__toggle-open {
+        .icon-close {
+            display: none;
+        }
+    }
+    &.open {
+        .search-modal__toggle-open {
+            .icon-search {
+                display: none;
+            } 
+            .icon-close {
+                display: block;
+            }
+        }
+    }
+}
 .search-modal {
     background-color: var(--header-search-background-color);
     bottom: initial;
@@ -75,6 +93,7 @@ details-open.open .header__search .search-modal__overlay:after {
     right: 0;
     bottom: 4rem;
     z-index: 6;
+    display: none;
 }
 
 .search-modal__close-button path {
@@ -111,7 +130,7 @@ details-open.open .header__search .search-modal__overlay:after {
     width: 100%;
     background-color: transparent;
     border-bottom: 1px solid #000;
-    padding: 0 0 1.5rem;
+    padding: 0;
     margin-bottom: 2.4rem;
     letter-spacing: -0.04em;
     -webkit-appearance: none;
