--- a/scss/components/component-search-tabs.scss
+++ b/scss/components/component-search-tabs.scss
@@ -95,7 +95,7 @@
 .search-product-post__title,
 .search-blog-post__title,
 .search-collection-post__title {
-    margin-bottom: 0;
+    margin-bottom: 1rem;
 }
 
 .search-product-post__title a,
