--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -37,6 +37,7 @@
 {{ 'component-mobile-menu.css' | asset_url | stylesheet_tag }}
 {{ 'component-search-modal.css' | asset_url | stylesheet_tag }}
 {{ 'component-search-tabs.css' | asset_url | stylesheet_tag }}
+{{ 'component-card-products.css' | asset_url | stylesheet_tag }}
 
 <sticky-header
     id="shopify-section-header"
