--- a/scss/sections/section-header.scss
+++ b/scss/sections/section-header.scss
@@ -345,6 +345,11 @@ details-open.open #userLinks {
         }
         .list-social__link {
             display: block;
+            transform: scale(1);
+            transition: all .3s ease;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
         svg {
             width: 2rem;
